// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecipeNewComment renders with some text and a confirm button 1`] = `
<View
  style={
    {
      "borderBottomColor": "#104e01",
      "borderBottomWidth": 0.5,
      "flexDirection": "row",
      "marginLeft": "2%",
      "marginRight": "2%",
      "marginTop": 3,
      "paddingBottom": "1%",
      "width": "96%",
    }
  }
>
  <View
    style={
      {
        "flex": 2,
      }
    }
  >
    <Image
      source={
        {
          "uri": "https://robohash.org/utautnemo.png?size=300x300&set=set1",
        }
      }
      style={
        {
          "borderRadius": 11.25,
          "height": 60,
          "marginRight": "4%",
          "width": "96%",
        }
      }
    />
  </View>
  <View
    style={
      {
        "flex": 8,
      }
    }
  >
    <Text
      maxFontSizeMultiplier={2}
      style={
        {
          "color": "#505050",
          "fontSize": 33.65552620959067,
          "fontStyle": "italic",
          "marginLeft": "3%",
          "marginRight": "3%",
        }
      }
    >
      pothers
      :
    </Text>
    <TextInput
      autoFocus={true}
      maxFontSizeMultiplier={2}
      multiline={true}
      numberOfLines={2}
      onChangeText={[Function]}
      placeholder="Type comment here..."
      style={
        {
          "color": "#505050",
          "fontSize": 33.65552620959067,
          "marginLeft": "3%",
          "marginRight": "3%",
          "paddingLeft": 15,
        }
      }
      value="Here is my test comment text"
    />
  </View>
</View>
`;

exports[`RecipeNewComment renders without an image_url 1`] = `
<View
  style={
    {
      "borderBottomColor": "#104e01",
      "borderBottomWidth": 0.5,
      "flexDirection": "row",
      "marginLeft": "2%",
      "marginRight": "2%",
      "marginTop": 3,
      "paddingBottom": "1%",
      "width": "96%",
    }
  }
>
  <View
    style={
      {
        "flex": 2,
      }
    }
  >
    <Image
      source={1}
      style={
        {
          "borderRadius": 11.25,
          "height": 60,
          "marginRight": "4%",
          "width": "96%",
        }
      }
    />
  </View>
  <View
    style={
      {
        "flex": 8,
      }
    }
  >
    <Text
      maxFontSizeMultiplier={2}
      style={
        {
          "color": "#505050",
          "fontSize": 33.65552620959067,
          "fontStyle": "italic",
          "marginLeft": "3%",
          "marginRight": "3%",
        }
      }
    >
      pothers
      :
    </Text>
    <TextInput
      autoFocus={true}
      maxFontSizeMultiplier={2}
      multiline={true}
      numberOfLines={2}
      onChangeText={[Function]}
      placeholder="Type comment here..."
      style={
        {
          "color": "#505050",
          "fontSize": 33.65552620959067,
          "marginLeft": "3%",
          "marginRight": "3%",
          "paddingLeft": 15,
        }
      }
      value="Here is my test comment text"
    />
  </View>
</View>
`;
